# cube_face_text

./: Cargo.toml  README.md
examples/: cube_face_texture.rs
src/: cube_mesh.rs  lib.rs  main.rs
